bdr.BDR2.scala.error
Compilation error:
BDR2:5: error: value forward is not a member of Unit
  case "R" => right() forward()
                      ^BDR2:6: error: value forward is not a member of Unit
  case "L" => left() forward()
                     ^BDR2:7: error: value right is not a member of Unit
  case "I" => right() right() forward()
                      ^BDR2:9: error: value forward is not a member of Unit
  case "B" => forward() forward()
                        ^BDR2:10: error: value forward is not a member of Unit
  case "C" => forward() forward() forward()
                        ^BDR2:11: error: value forward is not a member of Unit
  case "D" => forward() forward() forward() forward()
                        ^BDR2:12: error: value forward is not a member of Unit
  case "E" => forward() forward() forward() forward() forward()
                        ^BDR2:13: error: value forward is not a member of Unit
  case "F" => forward() forward() forward() forward() forward() forward()
                        ^BDR2:15: error: value backward is not a member of Unit
  case "Y" => backward() backward()
                         ^BDR2:16: error: value backward is not a member of Unit
  case "X" => backward() backward() backward()
                         ^BDR2:17: error: value backward is not a member of Unit
  case "W" => backward() backward() backward() backward()
                         ^BDR2:18: error: value backward is not a member of Unit
  case "V" => backward() backward() backward() backward() backward()
                         ^